<resources>
    <string name="app_name">Calc</string>
    <string name="mc">MC</string>
    <string name="mp">M+</string>
    <string name="m_min">M-</string>
    <string name="mr">MR</string>
    <string name="mul">×</string>
    <string name="div">÷</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="c">C</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="del">Del</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="eq">=</string>
    <string name="dot">.</string>
    <string name="_0">0</string>
    <string name="per">%</string>
    <string name="main_screen">0</string>
</resources>