<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/main_screen_margin"
        android:layout_marginTop="@dimen/main_screen_margin"
        android:layout_marginEnd="@dimen/main_screen_margin"
        android:layout_marginBottom="@dimen/main_screen_margin"
        android:background="@drawable/back_port"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="3">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonTheme"
                android:theme="@style/ButtonThemeStyle"
                android:textAllCaps="false"
                android:layout_marginStart="@dimen/theme_button_margin_start"
                android:layout_marginTop="@dimen/theme_button_margin_top"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="Theme"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/textViewMemory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end|top"
                android:paddingStart="@dimen/main_screen_padding"
                android:paddingTop="@dimen/main_screen_padding"
                android:paddingEnd="@dimen/main_screen_padding"
                android:textSize="@dimen/memory_text_size"
                app:layout_constraintBottom_toTopOf="@+id/buttonMC" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewOperands"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="end|bottom"
            android:paddingStart="@dimen/main_screen_padding"
            android:paddingEnd="@dimen/main_screen_padding"
            android:textSize="@dimen/operands_text_size"
            app:layout_constraintBottom_toTopOf="@+id/buttonMC" />

        <TextView
            android:id="@+id/textViewCalc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="end|bottom"
            android:paddingStart="@dimen/main_screen_padding"
            android:paddingEnd="@dimen/main_screen_padding"
            android:paddingBottom="@dimen/main_screen_padding"
            android:textSize="@dimen/main_screen_text_size"
            android:textIsSelectable="true"
            app:layout_constraintBottom_toTopOf="@+id/buttonMC" />

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonMC"
        style="@style/ButtonMemoryStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/mc"
        app:layout_constraintBottom_toTopOf="@id/buttonMul"
        app:layout_constraintEnd_toStartOf="@+id/buttonMP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline5"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonMP"
        style="@style/ButtonMemoryStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/mp"
        app:layout_constraintBottom_toTopOf="@id/buttonDiv"
        app:layout_constraintEnd_toStartOf="@+id/buttonMM"
        app:layout_constraintStart_toEndOf="@+id/buttonMC"
        app:layout_constraintTop_toBottomOf="@+id/guideline5"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonMM"
        style="@style/ButtonMemoryStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/m_min"
        app:layout_constraintBottom_toTopOf="@id/buttonPlus"
        app:layout_constraintEnd_toStartOf="@+id/buttonMR"
        app:layout_constraintStart_toEndOf="@+id/buttonMP"
        app:layout_constraintTop_toBottomOf="@+id/guideline5"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonMR"
        style="@style/ButtonMemoryStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/mr"
        app:layout_constraintBottom_toTopOf="@id/buttonMin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonMM"
        app:layout_constraintTop_toBottomOf="@+id/guideline5"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonMul"
        style="@style/ButtonActionStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/mul"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/buttonDiv"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMC"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDiv"
        style="@style/ButtonActionStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/div"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@id/buttonPlus"
        app:layout_constraintStart_toEndOf="@id/buttonMul"
        app:layout_constraintTop_toBottomOf="@+id/buttonMP"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonPlus"
        style="@style/ButtonActionStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/plus"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toStartOf="@id/buttonMin"
        app:layout_constraintStart_toEndOf="@+id/buttonDiv"
        app:layout_constraintTop_toBottomOf="@+id/buttonMM"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonMin"
        style="@style/ButtonActionStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/minus"
        app:layout_constraintBottom_toTopOf="@+id/buttonC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonPlus"
        app:layout_constraintTop_toBottomOf="@+id/buttonMR"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button7"
        style="@style/ButtonNumberStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_7"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@id/button8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonMul"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button8"
        style="@style/ButtonNumberStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_8"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@id/buttonDiv"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button9"
        style="@style/ButtonNumberStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_9"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@id/buttonC"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@id/buttonPlus"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonC"
        style="@style/ButtonActionStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/c"
        app:layout_constraintBottom_toTopOf="@+id/buttonDel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@id/buttonMin"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button4"
        style="@style/ButtonNumberStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_4"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button7"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button5"
        style="@style/ButtonNumberStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_5"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@id/button6"
        app:layout_constraintStart_toEndOf="@id/button4"
        app:layout_constraintTop_toBottomOf="@id/button8"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button6"
        style="@style/ButtonNumberStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_6"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@id/buttonDel"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@id/button9"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDel"
        style="@style/ButtonActionStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        app:icon="?attr/actionModeCloseDrawable"
        app:iconGravity="textStart"
        app:iconSize="@dimen/icon_left_arrow"
        app:layout_constraintBottom_toTopOf="@+id/buttonEq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@id/buttonC"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button1"
        style="@style/ButtonNumberStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_1"
        app:layout_constraintBottom_toTopOf="@+id/buttonPer"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button4"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        style="@style/ButtonNumberStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_2"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@id/button1"
        app:layout_constraintTop_toBottomOf="@id/button5"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button3"
        style="@style/ButtonNumberStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_3"
        app:layout_constraintBottom_toTopOf="@+id/buttonDot"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@id/button2"
        app:layout_constraintTop_toBottomOf="@id/button6"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonEq"
        style="@style/ButtonMemoryStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/eq"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonDot"
        app:layout_constraintTop_toBottomOf="@id/buttonDel"
        app:layout_constraintVertical_weight="2.055" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDot"
        style="@style/ButtonNumberStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonEq"
        app:layout_constraintStart_toEndOf="@id/button0"
        app:layout_constraintTop_toBottomOf="@id/button3"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button0"
        style="@style/ButtonNumberStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonDot"
        app:layout_constraintStart_toEndOf="@id/buttonPer"
        app:layout_constraintTop_toBottomOf="@id/button2"
        app:layout_constraintVertical_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonPer"
        style="@style/ButtonNumberStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/per"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button1"
        app:layout_constraintVertical_weight="1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

</androidx.constraintlayout.widget.ConstraintLayout>